# Batch67

./: PIAlC255646.ipynb
agentai/: pyproject.toml
agentai/src/agentai/: __init__.py  my_secrets.py  myagent.py
decorators_project/: README.md  main.py  pyproject.toml
decorators_project/src/decorators/: decorators.py
decorators_project/src/decorators_project.egg-info/: PKG-INFO  SOURCES.txt
hello-agent/: README.md  pyproject.toml
hello-agent/src/hello_agent/: agent_hello.py
