[project]
name = "agentai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.16",
]

[project.scripts]
agentai = "agentai:main"
myagent = "agentai.myagent:My_First_Agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
